force-app/main/default/objects/b3p__Page__c/fields/b3p__Disable_Caching__c.field-meta.xml
<CustomField>
    <fullName>b3p__Disable_Caching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Caching</label>
    <type>Checkbox</type>
</CustomField>