force-app/main/default/objects/b3p__Page__c/fields/b3p__Guest_User_Accessible__c.field-meta.xml
<CustomField>
    <fullName>b3p__Guest_User_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, non-authenticated users can view and interact with this page</inlineHelpText>
    <label>Guest User Accessible</label>
    <type>Checkbox</type>
</CustomField>