force-app/main/default/objects/b3p__Page__c/fields/b3p__Title__c.field-meta.xml
<CustomField>
    <fullName>b3p__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>