force-app/main/default/objects/b3p__Page__c/fields/b3p__Web_Portal__c.field-meta.xml
<CustomField>
    <fullName>b3p__Web_Portal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The portal to which this page is assigned</inlineHelpText>
    <label>Web Portal</label>
    <referenceTo>b3p__Web_Portal__c</referenceTo>
    <relationshipLabel>Pages</relationshipLabel>
    <relationshipName>Pages</relationshipName>
    <type>Lookup</type>
</CustomField>