force-app/main/default/objects/b3p__Page__c/listViews/b3p__All.listView-meta.xml
<ListView>
    <fullName>b3p__All</fullName>
    <columns>NAME</columns>
    <columns>b3p__Web_Portal__c</columns>
    <columns>b3p__Title__c</columns>
    <columns>b3p__Guest_User_Accessible__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>