force-app/main/default/objects/b3p__Page__c/listViews/b3p__All1.listView-meta.xml
<ListView>
    <fullName>b3p__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>